Updated css for tables to avoid sideways scrollbar

--- a/docs/_static/css/style.css
+++ b/docs/_static/css/style.css
@@ -1,3 +1,15 @@
 .wy-side-nav-search>div.version {
     color: black;
 }
+@media screen and (min-width: 767px) {
+
+   .wy-table-responsive table td {
+      /* !important prevents the common CSS stylesheets from overriding
+         this as on RTD they are loaded after this stylesheet */
+      white-space: normal !important;
+   }
+
+   .wy-table-responsive {
+      overflow: visible !important;
+   }
+}
